--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,40 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
+	<!--Navigation Bar-->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	 	<a class="navbar-brand" href="#">Navbar</a>
+		<div class="container">
+			<a class="navbar-brand" href="#">Navbar</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+					<a class="nav-link" href="index.html">About</a>
+					</li>
+					<li class="nav-item">
+					<a class="nav-link" href="portfolio.html">Portfolio</a>
+					</li>
+					<li class="nav-item active">
+					<a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+					</li>
+				</ul>
+			</div>
+		</div>
 	</nav>
+
+	<!--Content-->
+	<div class="container mt-3 mb-5">
+		
+	</div>
+
+	<!--Footer-->
+	<footer class="footer fixed-bottom text-center">
+		<div class="container-fluid bg-dark text-white">
+			copyright &copy;
+		</div>
+	</footer>
 </body>
 </html>
