--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<!--Navigation Bar-->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
 		<div class="container">
 			<a class="navbar-brand" href="#">Navbar</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +29,8 @@
 		</div>
 	</nav>
 
-	<div class="container">
+	<!--Content-->
+	<div class="container mt-3 mb-5">
 		<div class="row">
 			<div class="col-sm-8">
 				<div class="page-header">
@@ -41,6 +43,14 @@
 					<div class="col-sm-9">
 						<div class="caption">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
+
 						</div>
 					</div>
 				</div>
@@ -48,6 +58,7 @@
 		</div>
 	</div>
 
+	<!--Footer-->
 	<footer class="footer fixed-bottom text-center">
   		<div class="container-fluid bg-dark text-white">
   			copyright &copy;
