--- a/contact.html
+++ b/contact.html
@@ -4,25 +4,25 @@
 	<title>Contact Page</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
-<body>
+<body class="bg-secondary">
 	<!--Navigation Bar-->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom-secondary my-0 p-0">
 		<div class="container">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="h1 navbar-brand text-light bg-info text-center p-3 my-0 px-5" href="#">Ashley Luk</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
+					<li class="nav-item border-right">
 					<a class="nav-link" href="index.html">About</a>
 					</li>
 					<li class="nav-item">
 					<a class="nav-link" href="portfolio.html">Portfolio</a>
 					</li>
-					<li class="nav-item active">
-					<a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+					<li class="nav-item border-left active">
+					<a class="nav-link" href="#">Contact <span class="sr-only">(current)</span></a>
 					</li>
 				</ul>
 			</div>
@@ -30,13 +30,36 @@
 	</nav>
 
 	<!--Content-->
-	<div class="container mt-3 mb-5">
-		
+	<div class="container">
+		<div class="row border p-4 mt-4 mb-5 mx-1 bg-light">
+			<div class="col-sm-12">
+				<div class="page-header border-bottom mb-4 text-info">
+					<h1>Contact</h1>
+				</div>
+			<div class="col-sm-12">
+				<form>
+					<div class="form-group">
+						<label for="name">Name</label>
+						<input type="email" class="form-control" id="name" placeholder="Your Name">
+					</div>
+					<div class="form-group">
+						<label for="email">Email address</label>
+						<input type="email" class="form-control" id="email" placeholder="name@example.com">
+					</div>
+					<div class="form-group">
+						<label for="message">Message</label>
+						<textarea class="form-control" id="messeage" rows="6"></textarea>
+					</div>
+					<button type="submit" class="btn btn-info">Submit</button>
+				</form>
+			</div>
+			</div>
+		</div>
 	</div>
 
 	<!--Footer-->
 	<footer class="footer fixed-bottom text-center">
-		<div class="container-fluid bg-dark text-white">
+		<div class="container-fluid bg-info text-white py-2">
 			copyright &copy;
 		</div>
 	</footer>
