--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 	<title>About Me</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-secondary">
 	<!--Navigation Bar-->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom-secondary my-0 p-0">
 		<div class="container">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="h1 navbar-brand text-light bg-info text-center p-3 my-0 px-5" href="#">Ashley Luk</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
+					<li class="nav-item border-right active">
 					<a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 					<a class="nav-link" href="portfolio.html">Portfolio</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item border-left">
 					<a class="nav-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
@@ -30,29 +30,29 @@
 	</nav>
 
 	<!--Content-->
-	<div class="container mt-3 mb-5">
-		<div class="row">
+	<div class="container">
+		<div class="row border p-4 mt-4 mb-5 mx-1 bg-light">
 			<div class="col-sm-8">
-				<div class="page-header">
+				<div class="page-header border-bottom mb-4 text-info">
 					<h1>About Me</h1>
 				</div>
 				<div class="row">
-					<div class="col-sm-3">
-						<img src="http://via.placeholder.com/150x150" class="img-thumbnail" alt="...">
-					</div>
-					<div class="col-sm-9">
+					<div class="col-sm-12 col-lg-12">
+						<img src="http://via.placeholder.com/200x200" class="img-thumbnail float-left mr-5 mb-3" alt="...">
 						<div class="caption">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
 
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum. Quisque dictum eros non turpis scelerisque condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut nec dui id magna mattis cursus. Nunc pretium hendrerit luctus. Vivamus vestibulum leo quis nisi mattis efficitur. Aenean in dictum magna.</p>
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="col-sm-12 col-lg-3 ml-4">
+				<div class="card" style="width: 18rem;">
+					<div class="card-body">
+						<h5 class="card-title">Lorem Ipsum</h5>
+						<h6 class="card-subtitle mb-2 text-muted">dolor sit amet</h6>
+						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tristique lacus. Proin sodales rhoncus libero imperdiet elementum.</p>
 				</div>
 			</div>
 		</div>
@@ -60,7 +60,7 @@
 
 	<!--Footer-->
 	<footer class="footer fixed-bottom text-center">
-  		<div class="container-fluid bg-dark text-white">
+  		<div class="container-fluid bg-info text-white py-2">
   			copyright &copy;
   		</div>
 	</footer>
