--- a/portfolio.html
+++ b/portfolio.html
@@ -4,41 +4,88 @@
 	<title>Portfolio Page</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
-<body>
+<body class="bg-secondary">
 	<!--Navigation Bar-->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom-secondary my-0 p-0">
 		<div class="container">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="h1 navbar-brand text-light bg-info text-center p-3 my-0 px-5" href="#">Ashley Luk</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
+					<li class="nav-item border-right">
 					<a class="nav-link" href="index.html">About</a>
 					</li>
 					<li class="nav-item active">
-					<a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item border-left">
 					<a class="nav-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
 		</div>
+	</nav>
 
 		
 	</nav>
 
 	<!--Content-->
-	<div class="container mt-3 mb-5">
-			
+	<div class="container">
+		<div class="row border p-4 mt-4 mb-5 mx-1 bg-light text-info">
+			<div class="col-sm-12">
+				<div class="page-header border-bottom mb-4 text-info">
+					<h1>Portfolio</h1>
+				</div>
+			</div>
+			<div class="col-sm-11 col-lg-3 mx-3 my-4">
+				<a href="#">
+					<img src="http://via.placeholder.com/200x200" class="card-img">
+					<div class="card-img-overlay card-title text-center bg-info text-white p-3 h-25 mt-3 mx-3">
+						<h5>HTML/CSS</h5>
+					</div>
+				</a>
+			</div>
+			<div class="col-sm-11 col-lg-3 mx-3 my-4">
+				<a href="#">
+					<img src="http://via.placeholder.com/200x200" class="card-img">
+					<div class="card-img-overlay card-title text-center bg-info text-white p-3 h-25 mt-3 mx-3">
+						<h5>Games</h5>
+					</div>
+				</a>
+			</div>
+			<div class="col-sm-11 col-lg-3 mx-3 my-4">
+				<a href="#">
+					<img src="http://via.placeholder.com/200x200" class="card-img">
+					<div class="card-img-overlay card-title text-center bg-info text-white p-3 h-25 mt-3 mx-3">
+						<h5>Film</h5>
+					</div>
+				</a>
+			</div>
+			<div class="col-sm-11 col-lg-3 mx-3 my-4">
+				<a href="#">
+					<img src="http://via.placeholder.com/200x200" class="card-img">
+					<div class="card-img-overlay card-title text-center bg-info text-white p-3 h-25 mt-3 mx-3">
+						<h5>Models</h5>
+					</div>
+				</a>
+			</div>
+			<div class="col-sm-11 col-lg-3 mx-3 my-4">
+				<a href="#">
+					<img src="http://via.placeholder.com/200x200" class="card-img">
+					<div class="card-img-overlay card-title text-center bg-info text-white p-3 h-25 mt-3 mx-3">
+						<h5>Animation</h5>
+					</div>
+				</a>
+			</div>
+		</div>
 	</div>
 
 	<!--Footer-->
 	<footer class="footer fixed-bottom text-center">
-		<div class="container-fluid bg-dark text-white">
+		<div class="container-fluid bg-info text-white py-2">
 			copyright &copy;
 		</div>
 	</footer>
