--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
 	<!--Footer-->
 	<footer class="footer fixed-bottom text-center">
 		<div class="container-fluid bg-info text-white py-2">
-			copyright &copy;
+			copyright &copy; Ashley Luk
 		</div>
 	</footer>
 </body>
