fit footer color and add top border

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
 
 	<!--Footer-->
 	<footer class="footer fixed-bottom text-center">
-		<div class="container-fluid bg-info text-white py-2">
+		<div class="container-fluid bg-dark border-top border-info text-white py-2">
 			copyright &copy; Ashley Luk
 		</div>
 	</footer>
